--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,40 @@
   position: fixed;
   overflow: hidden;
   top: 0
+  transition: opacity .65s cubic-bezier(.23,1,.32,1) 0s,background-color .1s cubic-bezier(.23,1,.32,1) 0s;
+}
+
+
+ .global-nav-bar {
+    margin: auto;
+    padding-right: 50px;
+    height: 100vh;
+    z-index: 502;
+   position: relative;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@only screen and (min-width: 1025px) {
+  #globalNav {
+    height: 100px;
+  }
 }
